--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="known_for">Known For</string>
     <string name="biography">Biography</string>
     <string name="result">Result</string>
+    <string name="no_result">No Result</string>
     <string name="choose_a_genres">Choose a genres</string>
 </resources>
